added the graph using langgraph

--- a/trial.ipynb
+++ b/trial.ipynb
@@ -74,8 +74,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "654c23a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'GenModel' from 'HybridSearchRAG.model' (d:\\Project\\RAG\\HybridSearchRAG\\model.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01moperator\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m add\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdocuments\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Document\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mHybridSearchRAG\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GenModel\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mHybridSearchRAG\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mretriever\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_hybrid_retriever\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mHybridSearchRAG\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GRADE_DOCS, FINAL_ANSWER\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'GenModel' from 'HybridSearchRAG.model' (d:\\Project\\RAG\\HybridSearchRAG\\model.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.messages import BaseMessage\n",
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from typing import TypedDict, Annotated, List\n",
+    "from operator import add\n",
+    "from langchain_core.documents import Document\n",
+    "\n",
+    "\n",
+    "from HybridSearchRAG.model import GenModel\n",
+    "from HybridSearchRAG.retriever import get_hybrid_retriever\n",
+    "from HybridSearchRAG.prompts import GRADE_DOCS, FINAL_ANSWER\n",
+    "\n",
+    "llm = GenModel()\n",
+    "retriever = get_hybrid_retriever()\n",
+    "\n",
+    "class AgentState(TypedDict):\n",
+    "    messages : List[BaseMessage]\n",
+    "    question : str\n",
+    "    documents : List[Document]\n",
+    "    relevance : str\n",
+    "    result : str\n",
+    "\n",
+    "def retriever_node(state : AgentState) -> AgentState:\n",
+    "    print(\"--- RETRIEVING DOCUMENTS ---\")\n",
+    "    query = state['question']\n",
+    "    result = retriever.invoke(query)\n",
+    "    print(f\"--- RETRIEVED {len(result)} DOCUMENTS ---\")\n",
+    "    return {\"documents\" : result}\n",
+    "\n",
+    "def grade_docs(state : AgentState) -> AgentState:\n",
+    "    print(\"--- GRADING DOCUMENTS ---\")  \n",
+    "    question = state[\"question\"]\n",
+    "    docs = state[\"documents\"]\n",
+    "    prompt = GRADE_DOCS.format_prompt(question=question, documents=docs)\n",
+    "\n",
+    "    result = llm.invoke(prompt)\n",
+    "    if \"yes\" in result.lower():\n",
+    "        print(\"--- GRADE: DOCUMENTS ARE RELEVANT ---\")\n",
+    "        return {\"relevance\": \"YES\"}\n",
+    "    else:\n",
+    "        print(\"--- GRADE: DOCUMENTS ARE NOT RELEVANT ---\")\n",
+    "        return {\"relevance\": \"NO\"}\n",
+    "    \n",
+    "def generation(state : AgentState) -> AgentState:\n",
+    "    print(\"--- GENERATING ANSWER ---\")\n",
+    "\n",
+    "    query = state[\"question\"]\n",
+    "    docs = state['documents']\n",
+    "    formatted_docs = \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "    prompt = FINAL_ANSWER.format_prompt(context=formatted_docs, question=query)\n",
+    "\n",
+    "    result = llm.invoke(prompt)\n",
+    "    print(\"--- ANSWER GENERATED ---\")\n",
+    "\n",
+    "    return {\"result\" : result}\n",
+    "\n",
+    "def should_continue(state : AgentState):\n",
+    "    relevance = state[\"relevance\"]\n",
+    "\n",
+    "    if \"yes\" in relevance.lower().strip():\n",
+    "        return \"CONTINUE\"\n",
+    "    return \"END\"\n",
+    "\n",
+    "graph = StateGraph(AgentState)\n",
+    "\n",
+    "graph.add_node(\"RETRIEVER NODE\", retriever_node)\n",
+    "graph.add_node(\"GRADE NODE\", grade_docs)\n",
+    "graph.add_node(\"GENERATION NODE\", generation)\n",
+    "\n",
+    "graph.add_edge(START, \"RETRIEVER NODE\")\n",
+    "graph.add_edge(\"RETRIEVER NODE\", \"GRADE NODE\")\n",
+    "\n",
+    "graph.add_conditional_edges(\n",
+    "    \"GRADE NODE\",\n",
+    "    should_continue,\n",
+    "    {\n",
+    "        \"CONTINUE\" : \"GENERATION NODE\",\n",
+    "        \"END\" : END\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "graph.add_edge(\"GENERATION NODE\", END)\n",
+    "\n",
+    "app = graph.compile()\n",
+    "app\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "085e6228",
    "metadata": {},
    "outputs": [],
    "source": []
