added readme content

--- a/trial.ipynb
+++ b/trial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3db202f7",
    "metadata": {},
    "outputs": [],
@@ -25,48 +25,7 @@
    "execution_count": null,
    "id": "a02e9f31",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chunking...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'producer': 'PyPDF2',\n",
-       " 'creator': 'PyPDF',\n",
-       " 'creationdate': '',\n",
-       " 'subject': 'Neural Information Processing Systems http://nips.cc/',\n",
-       " 'publisher': 'Curran Associates, Inc.',\n",
-       " 'language': 'en-US',\n",
-       " 'created': '2017',\n",
-       " 'eventtype': 'Poster',\n",
-       " 'description-abstract': 'The dominant sequence transduction models are based on complex recurrent orconvolutional neural networks in an encoder and decoder configuration. The best performing such models also connect the encoder and decoder through an attentionm echanisms.  We propose a novel, simple network architecture based solely onan attention mechanism, dispensing with recurrence and convolutions entirely.Experiments on two machine translation tasks show these models to be superiorin quality while being more parallelizable and requiring significantly less timeto train. Our single model with 165 million parameters, achieves 27.5 BLEU onEnglish-to-German translation, improving over the existing best ensemble result by over 1 BLEU. On English-to-French translation, we outperform the previoussingle state-of-the-art with model by 0.7 BLEU, achieving a BLEU score of 41.1.',\n",
-       " 'title': 'Attention is All you Need',\n",
-       " 'date': '2017',\n",
-       " 'moddate': '2018-02-12T21:22:10-08:00',\n",
-       " 'published': '2017',\n",
-       " 'type': 'Conference Proceedings',\n",
-       " 'firstpage': '5998',\n",
-       " 'book': 'Advances in Neural Information Processing Systems 30',\n",
-       " 'description': 'Paper accepted and presented at the Neural Information Processing Systems Conference (http://nips.cc/)',\n",
-       " 'editors': 'I. Guyon and U.V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett',\n",
-       " 'author': 'Ashish Vaswani, Noam Shazeer, Niki Parmar, Jakob Uszkoreit, Llion Jones, Aidan N. Gomez, Łukasz Kaiser, Illia Polosukhin',\n",
-       " 'lastpage': '6008',\n",
-       " 'source': 'D:\\\\Project\\\\RAG\\\\docs\\\\NIPS-2017-attention-is-all-you-need-Paper.pdf',\n",
-       " 'total_pages': 11,\n",
-       " 'page': 0,\n",
-       " 'page_label': '1'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chunks = locate_and_split(r\"D:\\Project\\RAG\\docs\\NIPS-2017-attention-is-all-you-need-Paper.pdf\")\n",
     "chunks[0].metadata['title']"
@@ -74,22 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "654c23a6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'GenModel' from 'HybridSearchRAG.model' (d:\\Project\\RAG\\HybridSearchRAG\\model.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01moperator\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m add\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdocuments\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Document\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mHybridSearchRAG\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GenModel\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mHybridSearchRAG\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mretriever\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_hybrid_retriever\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mHybridSearchRAG\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GRADE_DOCS, FINAL_ANSWER\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'GenModel' from 'HybridSearchRAG.model' (d:\\Project\\RAG\\HybridSearchRAG\\model.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.messages import BaseMessage\n",
     "from langgraph.graph import StateGraph, START, END\n",
@@ -181,6 +128,76 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "085e6228",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_ollama import OllamaEmbeddings\n",
+    " \n",
+    "\n",
+    "text = [\n",
+    "    \"AI is field of Computer Science\",\n",
+    "    \"Langchain is Python Agentic Framework\"\n",
+    "]\n",
+    "\n",
+    "gemini_model = OllamaEmbeddings(model=\"embeddinggemma:latest\")\n",
+    "mxbai_model = OllamaEmbeddings(model=\"mxbai-embed-large:335m\")\n",
+    "\n",
+    "gemini_text_embeddings = gemini_model.embed_documents(text)\n",
+    "mxbai_text_embeddings = mxbai_model.embed_documents(text)\n",
+    "\n",
+    "gemini_embeddings = gemini_model.embed_query(\"What is AI\")\n",
+    "mxbai_embeddings = mxbai_model.embed_query(\"What is AI\")\n",
+    "\n",
+    "print(gemini_embeddings)\n",
+    "print(mxbai_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73754b3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "load_dotenv()\n",
+    "\n",
+    "OPENROUTER_API_KEY = os.getenv(\"OPENROUTER_API_KEY\")\n",
+    "BASE_URL = os.getenv(\"BASE_URL\")\n",
+    "def GenModel(name : str = \"gpt-oss-120b:free\", \n",
+    "             temperature : float = 1.0):\n",
+    "    \n",
+    "    llm = ChatOpenAI(\n",
+    "        model=name,\n",
+    "        api_key=OPENROUTER_API_KEY,\n",
+    "        temperature=temperature,\n",
+    "        base_url=BASE_URL,\n",
+    "        default_headers={\n",
+    "        \"HTTP-Referer\": \"http://localhost\",   \n",
+    "        \"X-Title\": \"Agent for project\"\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    return llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c11d34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = GenModel()\n",
+    "print(model.invoke(\"What is AI\").content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a0cd6a1",
    "metadata": {},
    "outputs": [],
    "source": []
